--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@ build/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/gradle.xml
 .idea/libraries/
 *.iws
 *.iml
 *.ipr
+log.txt
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
